// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletTransactionDetails.vue [AddLiquidity, finalized]: should be rendered correctly 1`] = `
<div
  class="transaction-container"
>
  <div
    class="transaction"
  >
    <transaction-hash-view-stub
      block=""
      hash=""
      translation="transaction.blockId"
      type="block"
      value="0xB8c77482e45F1F4d123DeRwQ5F52C74426C6DD"
    />
     
    <div
      class="info-line-container"
    >
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label="Status"
        labeltooltip=""
        value=""
        valuetooltip=""
      >
        <span
          class="transaction-status"
        >
          Complete
        </span>
         
        <s-icon-stub
          name="basic-check-mark-24"
          size="16px"
        />
      </info-line-stub>
       
      <!---->
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label="Date"
        labeltooltip=""
        value="Nov 27, 2020 11:59:59 PM"
        valuetooltip=""
      />
       
      <info-line-stub
        assetsymbol="XOR"
        fiatvalue=""
        isformatted="true"
        label="Amount"
        labeltooltip=""
        value="0.1"
        valuecanbehidden="true"
        valuetooltip=""
      >
        <token-logo-stub
          size="small"
          tokensymbol="XOR"
        />
      </info-line-stub>
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <info-line-stub
        assetsymbol="PSWAP"
        fiatvalue=""
        isformatted="true"
        label="Amount 2"
        labeltooltip=""
        value="0.9"
        valuecanbehidden="true"
        valuetooltip=""
      >
        <token-logo-stub
          size="small"
          tokensymbol="PSWAP"
        />
      </info-line-stub>
       
      <!---->
       
      <!---->
    </div>
     
    <transaction-hash-view-stub
      block=""
      hash=""
      translation="transaction.from"
      type="account"
      value="cnToWyQbAUWygF6utv6vSqFfi6VKayKsvXEkbyLGKFBTRYbz8"
    />
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`WalletTransactionDetails.vue [RegisterAsset, finalized]: should be rendered correctly 1`] = `
<div
  class="transaction-container"
>
  <div
    class="transaction"
  >
    <transaction-hash-view-stub
      block=""
      hash=""
      translation="transaction.blockId"
      type="block"
      value="0xB8c77482e45F1F4d123DeRwQ5F52C74426C6DD"
    />
     
    <div
      class="info-line-container"
    >
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label="Status"
        labeltooltip=""
        value=""
        valuetooltip=""
      >
        <span
          class="transaction-status"
        >
          Complete
        </span>
         
        <s-icon-stub
          name="basic-check-mark-24"
          size="16px"
        />
      </info-line-stub>
       
      <!---->
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label="Date"
        labeltooltip=""
        value="Nov 27, 2020 11:59:59 PM"
        valuetooltip=""
      />
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
    </div>
     
    <transaction-hash-view-stub
      block=""
      hash=""
      translation="transaction.from"
      type="account"
      value="cnToWyQbAUWygF6utv6vSqFfi6VKayKsvXEkbyLGKFBTRYbz8"
    />
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`WalletTransactionDetails.vue [RemoveLiquidity, finalized]: should be rendered correctly 1`] = `
<div
  class="transaction-container"
>
  <div
    class="transaction"
  >
    <transaction-hash-view-stub
      block=""
      hash=""
      translation="transaction.blockId"
      type="block"
      value="0xB8c77482e45F1F4d123DeRwQ5F52C74426C6DD"
    />
     
    <div
      class="info-line-container"
    >
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label="Status"
        labeltooltip=""
        value=""
        valuetooltip=""
      >
        <span
          class="transaction-status"
        >
          Complete
        </span>
         
        <s-icon-stub
          name="basic-check-mark-24"
          size="16px"
        />
      </info-line-stub>
       
      <!---->
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label="Date"
        labeltooltip=""
        value="Nov 27, 2020 11:59:59 PM"
        valuetooltip=""
      />
       
      <info-line-stub
        assetsymbol="XOR"
        fiatvalue=""
        isformatted="true"
        label="Amount"
        labeltooltip=""
        value="100.123"
        valuecanbehidden="true"
        valuetooltip=""
      >
        <token-logo-stub
          size="small"
          tokensymbol="XOR"
        />
      </info-line-stub>
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
    </div>
     
    <transaction-hash-view-stub
      block=""
      hash=""
      translation="transaction.from"
      type="account"
      value="cnToWyQbAUWygF6utv6vSqFfi6VKayKsvXEkbyLGKFBTRYbz8"
    />
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`WalletTransactionDetails.vue [Swap, error]: should be rendered correctly 1`] = `
<div
  class="transaction-container"
>
  <div
    class="transaction"
  >
    <transaction-hash-view-stub
      block=""
      hash=""
      translation="transaction.blockId"
      type="block"
      value="0xB8c77482e45F1F4d123DeRwQ5F52C74426C6DD"
    />
     
    <div
      class="info-line-container"
    >
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label="Status"
        labeltooltip=""
        value=""
        valuetooltip=""
      >
        <span
          class="transaction-status transaction-status--error"
        >
          Transaction failed
        </span>
         
        <!---->
      </info-line-stub>
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label="Error"
        labeltooltip=""
        value=""
        valuetooltip=""
      >
        <span
          class="transaction-status transaction-status--error"
        >
          Something went wrong
        </span>
      </info-line-stub>
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label="Date"
        labeltooltip=""
        value="Nov 27, 2020 11:59:59 PM"
        valuetooltip=""
      />
       
      <info-line-stub
        assetsymbol="XOR"
        fiatvalue=""
        isformatted="true"
        label="Amount"
        labeltooltip=""
        value="0.1"
        valuecanbehidden="true"
        valuetooltip=""
      >
        <token-logo-stub
          size="small"
          tokensymbol="XOR"
        />
      </info-line-stub>
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <info-line-stub
        assetsymbol="PSWAP"
        fiatvalue=""
        isformatted="true"
        label="Amount 2"
        labeltooltip=""
        value="0.9"
        valuecanbehidden="true"
        valuetooltip=""
      >
        <token-logo-stub
          size="small"
          tokensymbol="PSWAP"
        />
      </info-line-stub>
       
      <!---->
       
      <!---->
    </div>
     
    <transaction-hash-view-stub
      block=""
      hash=""
      translation="transaction.from"
      type="account"
      value="cnToWyQbAUWygF6utv6vSqFfi6VKayKsvXEkbyLGKFBTRYbz8"
    />
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`WalletTransactionDetails.vue [SwapTransferBatch, finalized]: should be rendered correctly 1`] = `
<div
  class="transaction-container"
>
  <div
    class="transaction"
  >
    <transaction-hash-view-stub
      block=""
      hash=""
      translation="transaction.blockId"
      type="block"
      value="0xf6792dc278d4f6251167e48c9fc1674c06df2cc27486ea63db48a989c90453d0"
    />
     
    <div
      class="info-line-container"
    >
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label="Status"
        labeltooltip=""
        value=""
        valuetooltip=""
      >
        <span
          class="transaction-status"
        >
          Complete
        </span>
         
        <s-icon-stub
          name="basic-check-mark-24"
          size="16px"
        />
      </info-line-stub>
       
      <!---->
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label="Date"
        labeltooltip=""
        value="Nov 27, 2020 11:59:59 PM"
        valuetooltip=""
      />
       
      <info-line-stub
        assetsymbol="XOR"
        fiatvalue=""
        isformatted="true"
        label="Amount"
        labeltooltip=""
        value="1.4665644"
        valuecanbehidden="true"
        valuetooltip=""
      >
        <token-logo-stub
          size="small"
          tokensymbol="XOR"
        />
      </info-line-stub>
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label="Transaction Fee"
        labeltooltip=""
        value=""
        valuetooltip=""
      >
        
        0.14 XOR
        
        <token-logo-stub
          size="small"
          tokensymbol="XOR"
        />
      </info-line-stub>
       
      <!---->
    </div>
     
    <transaction-hash-view-stub
      block=""
      hash=""
      translation="transaction.from"
      type="account"
      value="5FbFx7AoLdnyMbKCbVZVZqXcZQkhy4HDKnerSW4oKeEQb6pL"
    />
     
    <!---->
  </div>
   
  <adar-tx-details-stub
    transaction="[object Object]"
  />
</div>
`;

exports[`WalletTransactionDetails.vue [Transfer, finalized]: should be rendered correctly 1`] = `
<div
  class="transaction-container"
>
  <div
    class="transaction"
  >
    <transaction-hash-view-stub
      block="0xB8c77482e45F1F4d123DeRwQ5F52C74426C6DD"
      hash="0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
      translation="transaction.txId"
      type="id"
      value="0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
    />
     
    <div
      class="info-line-container"
    >
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label="Status"
        labeltooltip=""
        value=""
        valuetooltip=""
      >
        <span
          class="transaction-status"
        >
          Complete
        </span>
         
        <s-icon-stub
          name="basic-check-mark-24"
          size="16px"
        />
      </info-line-stub>
       
      <!---->
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label="Date"
        labeltooltip=""
        value="Nov 27, 2020 11:59:59 PM"
        valuetooltip=""
      />
       
      <info-line-stub
        assetsymbol="XOR"
        fiatvalue=""
        isformatted="true"
        label="Amount"
        labeltooltip=""
        value="0.1"
        valuecanbehidden="true"
        valuetooltip=""
      >
        <token-logo-stub
          size="small"
          tokensymbol="XOR"
        />
      </info-line-stub>
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
    </div>
     
    <transaction-hash-view-stub
      block=""
      hash=""
      translation="transaction.from"
      type="account"
      value="cnToWyQbAUWygF6utv6vSqFfi6VKayKsvXEkbyLGKFBTRYbz8"
    />
     
    <transaction-hash-view-stub
      block=""
      hash=""
      translation="transaction.to"
      type="account"
      value="cnVFiwzF3WPtnTpPc726d77MHcHEqbo1qRs589B5HLcwP2nse"
    />
  </div>
   
  <!---->
</div>
`;
